<resources>
    <string name="app_name">CalcEugen</string>
    <string name="logView" />
    <string name="textDisplayView">0</string>
    <string name="txtReset">C</string>
    <string name="txtTotal">=</string>
    <string name="txtDivision">/</string>
    <string name="txt7">7</string>
    <string name="txt8">8</string>
    <string name="txt9">9</string>
    <string name="txtMultiply">x</string>
    <string name="txt4">4</string>
    <string name="txt5">5</string>
    <string name="txt6">6</string>
    <string name="txtSubtraction">-</string>
    <string name="txt1">1</string>
    <string name="txt2">2</string>
    <string name="txt3">3</string>
    <string name="txtAddition">+</string>
    <string name="txt0">0</string>
    <string name="txtPoint">.</string>
    <string name="txtMinus">-/+</string>
    <string name="custThemes">Выбор темы</string>
    <string name="standart">Стандартная</string>
    <string name="red">Красная</string>
    <string name="yellow">Желтая</string>
    <string name="green">Зеленая</string>
    <string name="unusual">Необычная</string>
    <string name="sTheme">Темы</string>
</resources>