<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CD7C62"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginTen"
        android:text="@string/logView"
        android:textAlignment="textEnd"
        android:textSize="@dimen/sizeLogView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginFifteen"
        android:text="@string/textDisplayView"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="@dimen/sizeTextDisplayView"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/image"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/marginFifteen"
                android:layout_weight="1"
                android:text="@string/txtReset"
                android:textSize ="@dimen/sizeTextButton"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/marginFifteen"
                android:layout_weight="1.1"
                android:text="@string/txtTotal"
                android:textSize="@dimen/sizeTextButton"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/division"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/marginFifteen"
                android:layout_weight="1.25"
                android:text="@string/txtDivision"
                android:textSize="@dimen/sizeTextButton"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/marginFifteen"
                android:layout_weight="1"
                android:text="@string/txt7"
                android:textSize="@dimen/sizeTextButton"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/marginFifteen"
                android:layout_weight="1"
                android:text="@string/txt8"
                android:textSize="@dimen/sizeTextButton"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/marginFifteen"
                android:layout_weight="1"
                android:text="@string/txt9"
                android:textSize="@dimen/sizeTextButton"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/marginFifteen"
                android:layout_weight="1"
                android:text="@string/txtMultiply"
                android:textSize="@dimen/sizeTextButton"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/marginFifteen"
                android:layout_weight="1"
                android:text="@string/txt4"
                android:textSize="@dimen/sizeTextButton"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/marginFifteen"
                android:layout_weight="1"
                android:text="@string/txt5"
                android:textSize="@dimen/sizeTextButton"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/marginFifteen"
                android:layout_weight="1"
                android:text="@string/txt6"
                android:textSize="@dimen/sizeTextButton"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/subtraction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/marginFifteen"
                android:layout_weight="1"
                android:text="@string/txtSubtraction"
                android:textSize="@dimen/sizeTextButton"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginFifteen"
                android:layout_weight="1"
                android:text="@string/txt1"
                android:textSize="@dimen/sizeTextButton"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginFifteen"
                android:layout_weight="1"
                android:text="@string/txt2"
                android:textSize="@dimen/sizeTextButton"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginFifteen"
                android:layout_weight="1"
                android:text="@string/txt3"
                android:textSize="@dimen/sizeTextButton"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/addition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginFifteen"
                android:layout_weight="1"
                android:text="@string/txtAddition"
                android:textSize="@dimen/sizeTextButton"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/marginFifteen"
                android:layout_weight="1"
                android:text="@string/txt0"
                android:textSize="@dimen/sizeTextButton"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/point"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/marginFifteen"
                android:layout_weight="1.1"
                android:text="@string/txtPoint"
                android:textSize="@dimen/sizeTextButton"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/marginFifteen"
                android:layout_weight="1.25"
                android:text="@string/txtMinus"
                android:textSize="@dimen/sizeTextButton"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>